--- a/settings.ini
+++ b/settings.ini
@@ -45,11 +45,9 @@ allowed_cell_metadata_keys =
 jupyter_hooks = True
 clean_ids = True
 clear_all = False
-cell_number = True
+cell_number = False
 
 ### Optional ###
-# requirements = fastcore pandas
-# dev_requirements = 
 # console_scripts =
 # conda_user = 
 # package_data =
