--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,6 +4,9 @@ permissions:
   contents: write
   pages: write
 
+env:
+  GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+
 on:
   push:
     branches: [ "main", "master" ]
