--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,3 +8,16 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps: [uses: fastai/workflows/nbdev-ci@master]
+  test-env-var:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check GEMINI_API_KEY
+        run: |
+          if [ -z "$GEMINI_API_KEY" ]; then
+            echo "GEMINI_API_KEY is not set"
+            exit 1
+          else
+            echo "GEMINI_API_KEY is set"
+          fi
+        env:
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
