--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,7 +7,16 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
-    steps: [uses: fastai/workflows/nbdev-ci@master]
+    steps:
+      - uses: fastai/workflows/nbdev-ci@master
+      - name: Check GEMINI_API_KEY
+        run: |
+          if [ -z "$GEMINI_API_KEY" ]; then
+            echo "GEMINI_API_KEY is not set"
+            exit 1
+          else
+            echo "GEMINI_API_KEY is set"
+          fi
   test-env-var:
     runs-on: ubuntu-latest
     steps:
