--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,6 +3,7 @@ name: Deploy to GitHub Pages
 permissions:
   contents: write
   pages: write
+  secrets: read
 
 env:
   GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
