--- a/settings.ini
+++ b/settings.ini
@@ -6,11 +6,11 @@
 repo = gaspard
 lib_name = gaspard
 version = 0.0.1
-min_python = 3.8
+min_python = 3.9
 license = apache2
 black_formatting = False
-requirements = fastcore>=1.5.33 google-generativeai
-dev_requirements = toolslm ipython
+requirements = fastcore>=1.5.33 google-generativeai toolslm
+dev_requirements = ipython nbdev
 
 ### nbdev ###
 doc_path = _docs
