--- a/settings.ini
+++ b/settings.ini
@@ -9,7 +9,7 @@ version = 0.0.1
 min_python = 3.9
 license = apache2
 black_formatting = False
-requirements = fastcore>=1.5.33 google-generativeai toolslm
+requirements = fastcore>=1.5.33 google-generativeai toolslm>=0.0.7
 dev_requirements = ipython nbdev
 
 ### nbdev ###
