--- a/settings.ini
+++ b/settings.ini
@@ -30,8 +30,8 @@ title = gaspard
 
 ### PyPI ###
 audience = Developers
-author = Faisal Ladhak
-author_email = fl@answer.ai
+author = Answer.AI
+author_email = info@fast.ai
 copyright = 2024 onwards, %(author)s
 description = Helper for Gemini API
 keywords = nbdev jupyter notebook python
