Remove  function and use usage: filetype [-h] [-f FILE [FILE ...]] [-v]
Determine type of FILEs.

options:
  -h, --help            show this help message and exit
  -f FILE [FILE ...], --file FILE [FILE ...]
  -v, --version         output version information and exit library for MIME type detection and us io.BytesIO over temp files

--- a/settings.ini
+++ b/settings.ini
@@ -5,7 +5,7 @@ version = 0.0.2
 min_python = 3.9
 license = apache2
 black_formatting = False
-requirements = fastcore>=1.5.33 google-generativeai toolslm>=0.0.7
+requirements = fastcore>=1.5.33 filetype google-generativeai>=0.8.3 toolslm>=0.0.7
 dev_requirements = ipython nbdev
 doc_path = _docs
 lib_path = gaspard
